production/user_service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
      - name: ecr-registry-secret
      containers:
      - name: user-service
        image: 024955634588.dkr.ecr.us-east-1.amazonaws.com/user_service:latest
        ports:
        - containerPort: 8001
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
